--- a/static/style.css
+++ b/static/style.css
@@ -9751,4 +9751,100 @@ html {
         font-size: 20px;
     }
 
+    .newsdetail-header {
+        height: 54vh;
+    }
+
+    .newsdetail-header .header-content h1 {
+        font-size: 22px;
+    }
+
+    .news-detail-page {
+        padding: 30px 21px;
+    }
+
+    .news-detail-page {
+        flex-direction: column;
+        gap: 0rem;
+    }
+
+    .main-content h1 {
+        font-size: 28px;
+    }
+
+    .related-news h3 {
+        color: #e37932;
+        margin-bottom: 25px;
+        margin-top: 26px;
+        font-size: 28px;
+    }
+
+    .related-title {
+        font-size: 21px;
+    }
+
+    .project_detail_header {
+        height: 62vh;
+    }
+
+    .project_detail-section {
+        padding: 36px 21px;
+    }
+
+    .project_detail-image {
+        height: 44vh;
+    }
+
+    .project_detail-heading h1 {
+        font-size: 29px;
+        color: #e37932;
+    }
+
+    .project_detail-more-projects {
+        padding: 0 21px;
+    }
+
+    .project_detail-section {
+        padding: 9px 21px;
+    }
+
+    .project_detail-card {
+        flex: 1 1 calc(35.333% - 20px);
+    }
+
+    .company_profile_header {
+        height: 55vh;
+    }
+
+    .cp-section1-container {
+        padding: 20px 21px;
+    }
+
+    .cp-table {
+        padding: 0px 21px;
+    }
+
+    .cp-awards {
+        height: 200vh;
+        padding: 33px 21px;
+    }
+
+    .cp-awards-item {
+        width: 100%;
+        height: 34vh;
+    }
+
+    .cp-awards-image {
+        height: 283px;
+    }
+
+    .cp-awards-content p {
+        margin: 8px 0 0;
+    }
+
+    .cp-history {
+        padding: 21px 21px;
+    }
+
+
 }
